--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Chowdown
-email: your-email@domain.com
-description: The plain text recipe database for hackers
-baseurl: "https://chowdown.io"
+title: Yoko Family Recipes
+email: info@yokobosky.com
+description: The Yokobosky Family Recipe Book
+baseurl: "https://imfrompa.github.io/"
 language: "en"
 lang_direction: "ltr"
 color: "#007FFF"
-twitter_username: clarklab
-github_username:  clarklab
+twitter_username: yokobosky
+github_username:  imfrompa
 
 # Build settings
 markdown: kramdown
