--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Yoko Family Recipes
 email: info@yokobosky.com
 description: The Yokobosky Family Recipe Book
-baseurl: "https://imfrompa.github.io/"
+baseurl: "https://imfrompa.github.io"
 language: "en"
 lang_direction: "ltr"
 color: "#007FFF"
